# trophybassanalyzer

./: .gitignore  Procfile  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: lakes.yaml
data/processed/: catches.parquet  live_forecast_daily.parquet  live_forecast_hourly.parquet  predictions_2026.parquet  predictions_2026_hourly.parquet
scripts/: fetch_all_historical.py
src/: config.py
src/analysis/: correlations.py  forecast.py  live_forecast.py  model.py  patterns.py  simple_analysis.py
src/dashboard/: app.py  ui.py
src/dashboard/pages/: 1_Overview.py  2_Conditions_Explorer.py  3_Correlation_Analysis.py  4_2026_Predictions.py  5_Lake_Detail.py  6_Solunar_Calendar.py
src/ingest/: astro.py  tournaments.py  usabassin.py  water.py  weather.py
src/pipeline/: clean.py  features.py  merge.py
tests/: test_dashboard_ui.py
